--- a/templates/recipe/_recipesContent.html.twig
+++ b/templates/recipe/_recipesContent.html.twig
@@ -21,5 +21,5 @@
 		</div>
 	{% endfor %}
 {% else %}
-	<p class="text-center fs-5">Aucune recette trouvée</p>
+	<p class="text-center fs-5 mt-2">Aucune recette trouvée</p>
 {% endif %}
