--- a/templates/recipe/recipes.html.twig
+++ b/templates/recipe/recipes.html.twig
@@ -99,7 +99,7 @@
 		<section id="filtersSection" class="mt-4">
 			<div class="d-flex flex-column align-items-center">
 				<input type="text" id="recipeTitle" name="recipeTitle" placeholder="Titre de la recette" />
-				<div id="filters" class="d-flex mt-3">
+				<div id="filters" class="d-flex mt-4">
 					<select id="categorySelector">
 						<option value="" selected>Toutes catégories</option>
 						{% for category in categories %}
@@ -119,6 +119,12 @@
 						{% endfor %}
 					</select>
 				</div>
+				<select id="foodSelector" name="foodSelector" class="mt-4">
+					<option value="" selected hidden>Rercher par aliment</option>
+					{% for food in foods %}
+						<option value="{{ food.id }}">{{ food.name }} - ({{ food.section.name }})</option>
+					{% endfor %}
+				</select>
 			</div>
 		</section>
 		<section id="recipesSection">
@@ -133,7 +139,7 @@
 		</p>
 
 		<section id="addToPlanningSection">
-			<form class="mx-auto" method="post">
+			<form class="mx-auto mb-2" method="post">
 				<p class="text-center"><input type="text" id="recipeName" readOnly name="recipeName" class="text-center"></input></p>
 				<div class="d-flex justify-content-around align-items-center">
 					<select id="owner" name="owner" required>
